# GenerativeAIwithPython_Material

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_env.py
020_llm/: 10_model_chat_groq.py  28a_start_model_chat_groq.py  28b_model_chat_openai.py  28b_start_model_chat_openai.py  28c_model_chat_gemini.py  28c_start_model_chat_gemini.py  45_end_local_use.py  45_local_use.py  45_start_local_use.py  47_end_large_multimodal_models.py  47_large_multimodal_models.py  47_start_large_multimodal_models.py  72_start_prompt_templates.py  73_end_prompt_hub.py  73_start_prompt_hub.py  81_end_chains_coding.py  81_start_chains_coding.py  83_chains_seq_solution.py  83_end_chains_seq_solution.py  85_chains_parallel.py  85_end_chains_parallel.py  85_start_chains_parallel.py  87_end_chains_structured_output.py  87_start_chains_structured_output.py  88_end_chains_structured_output_deepseek.py  90_end_router_chain.py  90_start_router_chain.py  94_router_chain_solution.py  tokenizer.py
040_vector_db/: helper_funs.py  howto-logging-split.json  howto-logging.json
040_vector_db/10_DataLoader/: data_loading_end.py  data_loading_start.py
040_vector_db/20_DataChunking/: data_chunking_end.py  data_chunking_start.py
040_vector_db/30_Embedding/: 10_embedding_movie_start.py  15_embedding_movie_end.py  20_embeddings_start.py  25_embeddings_end.py  30_chromadb_store_start.py  35_chromadb_store_end.py  40_chromadb_retrieve_start.py  45_chromadb_retrieve_end.py  50_faiss_start.py  55_faiss_end.py
050_rag_baseline/: 10_rag_baseline_end.py  10_rag_baseline_start.py
060_rag_advanced/: 70_speculative_rag.py  80_agentic_rag.py  image_index.faiss  text_index.faiss
080_agents/adk/: deploy_bert.py
080_agents/ag2/: 10_ag2_conversable_agent_end.py  10_ag2_conversable_agent_start.py  20_ag2_two_agents_conversation_end.py  20_ag2_two_agents_conversation_start.py  30_ag2_human_in_the_loop_end.py  30_ag2_human_in_the_loop_start.py  40_ag2_tools_end.py  40_ag2_tools_start.py  50_ag2_group_chat_end.py  (+1 more)
(+30 files in other folders)
